(style) fix overflow for posted messages

--- a/client/assets/css/main.scss
+++ b/client/assets/css/main.scss
@@ -125,3 +125,15 @@ body {
 .curs{
   cursor: pointer;
 }
+
+.posted-messages{
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
